1) Application architecture switched to single-page application - rewritten API to give Access tokens immediately to JavaScript variable 2) Added service for sending codes to reset password (now without implementation) 3) Added versions of User entity for block during changing User info 4) Added isEnabled field for user in case of no usage before account activation 5) Added an opportunity to use email for authentication
