# src/main/resources/openapi-spec.yaml
@@ -29,6 +29,7 @@ paths:
       summary: Регистрация нового пользователя
       operationId: registerUser
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -45,10 +46,11 @@ paths:
       summary: Добавление роли пользователю
       operationId: addRoleToUser
       requestBody:
+        required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserNewRoleDTO"
+              $ref: "#/components/schemas/UserAndRoleDTO"
       responses:
         200:
           description: Success
@@ -61,9 +63,10 @@ paths:
       tags:
         - Authentication
       summary: Авторизация и получение токена
-      operationId: getToken
+      operationId: login
       security: []
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -77,6 +80,10 @@ paths:
               schema:
                 type: string
                 example: "refresh_token=etd...; Path=/ HttpOnly; Secure SameSite=Strict; Max-Age=604800"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token"
         500:
           $ref: "#/components/responses/ErrorResponse"
   /logout:
@@ -95,13 +102,12 @@ paths:
           schema:
             type: string
             format: jwt
-        - name: access_token
-          in: cookie
-          required: true
-          description: JWT Access token
-          schema:
-            type: string
-            format: jwt
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Token"
       responses:
         200:
           description: Successfully logged out
@@ -138,6 +144,10 @@ paths:
               schema:
                 type: string
                 example: "refresh_token=etd...; Path=/ HttpOnly; Secure SameSite=Strict; Max-Age=604800"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token"
         500:
           $ref: "#/components/responses/ErrorResponse"
   /clear_password:
@@ -147,6 +157,7 @@ paths:
       summary: Сброс пароля (запрос кода на почту)
       operationId: clearPassword
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -165,6 +176,7 @@ paths:
       summary: Смена пароля (принимает код подтверждения и новый пароль)
       operationId: changePassword
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -183,6 +195,7 @@ paths:
       summary: Эндпоинт для подтверждения регистрации (нужен код для завершения регистрации)
       operationId: confirmRegistration
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -201,10 +214,11 @@ paths:
       summary: Отзыв роли пользователя
       operationId: removeRole
       requestBody:
+        required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserAndRoleForRemovalDTO"
+              $ref: "#/components/schemas/UserAndRoleDTO"
       responses:
         200:
           description: Success
@@ -255,18 +269,18 @@ components:
           minLength: 4
       required:
         - user_email
-    UserAndRoleForRemovalDTO:
+    UserAndRoleDTO:
       type: object
-      description: DTO с пользователем и ролью на удаление
+      description: DTO с пользователем и ролью (для удаления/добавления роли)
       properties:
-        user_id:
+        user_data:
           type: string
-          format: uuid
-          minLength: 9
+          minLength: 3
         role:
           type: string
+          format: role
       required:
-        - user_id
+        - user_data
         - role
     UserRegistrationDTO:
       type: object
@@ -317,20 +331,6 @@ components:
       required:
         - description
         - time
-    UserNewRoleDTO:
-      type: object
-      description: DTO с новой ролью пользователя
-      properties:
-        user_id:
-          type: string
-          format: uuid
-          minLength: 1
-        role:
-          type: string
-          minLength: 2
-      required:
-        - user_id
-        - role
   responses:
     Forbidden:
       description: Запрещенный вызов
